gcc/testsuite/rust/rustc/ui/pattern/usefulness/match-privately-empty.rs
//@ revisions: normal exhaustive_patterns
#![cfg_attr(exhaustive_patterns, feature(exhaustive_patterns))]
#![feature(never_type)]

mod private {
    pub struct Private {
        _bot: !,
        pub misc: bool,
    }
    pub const DATA: Option<Private> = None;
}

fn main() {
    match private::DATA {
// { dg-error "" "" { target *-*-* } .-1 }
        None => {}
        Some(private::Private { misc: false, .. }) => {}
    }
}

